2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/common_option.cpp: don't exit() if merge_by.lib is set through
	  !allow_lib

2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport_options.cpp: move handle_merge_option() ...
	* pp/common_option.h: 
	* pp/common_option.cpp: here
	* pp/opannotate_options.cpp: use it but disallow --merge=lib

2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_file.c:
	* libutil/op_file.h: implement dirname(), is_directory() and
	  op_follow_link()
	* daemon/oprofiled.c: follow symlink for image filter
	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h:
	* gui/oprof_start_util.cpp:
	* libpp/profile_spec.cpp:  rename op_follow_link() to follow_link()

2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/tests/file_tests.c: "//usr" --> "//usr"
	* libutil++/tests/.cvsignore:
	* libutil++/tests/Makefile.am:
	* libutil++/tests/file_manip_tests.cpp: new tests file.

2003-10-31  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: fix compilation

2003-10-30  John Levon  <levon@movementarian.org>

	* libpp/profile_spec.cpp: introduce a helper function
	to make the comma_list matching clear

2003-10-30  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/comma_list.h: is_set() new member
	* libpp/profile_spec.cpp: fix matching logic for cpu/tid/tgid

2003-10-30  John Levon  <levon@movementarian.org>

	* libutil++/generic_spec.h: add value() and
	is_set(), remove bool parameter from T value
	match() (it was never set to true)

	* libutil++/comma_list.h: do not accept
	generic_spec, the behaviour was to implicitly
	not match an "all" generic_spec. Instead:

	* libpp/profile_spec.cpp: encode the matching
	behaviour explicitly, and add a comment.

	* libutil++/tests/comma_list_tests.cpp: fix to
	match the above

2003-10-30  John Levon  <levon@movementarian.org>

	* Makefile.am: re-order build subdirs

	* libabi/Makefile.am: only build abitest on
	make check
