@@ -41,8 +41,7 @@ populate_from_files(profile_t & profile, list<string> const & files, u32 offset)
 }  // anon namespace
 
 
-void
-populate_for_image(profile_container & samples, inverted_profile & ip)
+bool populate_for_image(profile_container & samples, inverted_profile & ip)
 {
 	bool ok = ip.error == image_ok;
 	op_bfd abfd(ip.image, options::symbol_filter, ok);
@@ -76,4 +75,6 @@ populate_for_image(profile_container & samples, inverted_profile & ip)
 
 	if (ip.error == image_ok)
 		check_mtime(abfd.get_filename(), header);
+
+	return abfd.has_debug_info();
 }
