@@ -17,7 +17,8 @@ class inverted_profile;
 
 
 /// Load all sample file information for exactly one binary image.
-void
+/// return false if none of the image contains debug information
+bool
 populate_for_image(profile_container & samples, inverted_profile & ip);
 
 #endif /* POPULATE_H */
